@@ -2,7 +2,7 @@
 org.gradle.jvmargs=-Xmx2G
 # --- COMMON GRADLE START ---
 # Mod Properties
-mod_version=6.1.8
+mod_version=6.1.9
 # Minecraft Versions
 minecraft_version=1.20.1
 forgeversion=47.1.43
