@@ -3,6 +3,5 @@ This registry can't be modified or added to.
 aura_gem
 gear
 jewel
-prophecy_unique
 rune
 support_gem
